// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/switch/demo/basic.md correctly 1`] = `
<span
  class="wmstool-switch wmstool-switch-checked"
  tabindex="0"
>
  <span
    class="wmstool-switch-inner"
  />
</span>
`;

exports[`renders ./components/switch/demo/disabled.md correctly 1`] = `
<div>
  <span
    class="wmstool-switch wmstool-switch-checked wmstool-switch-disabled"
    tabindex="-1"
  >
    <span
      class="wmstool-switch-inner"
    />
  </span>
  <br />
  <button
    class="wmstool-btn wmstool-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/switch/demo/loading.md correctly 1`] = `
<div>
  <span
    class="wmstool-switch-loading wmstool-switch wmstool-switch-checked"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    />
  </span>
  <br />
  <span
    class="wmstool-switch-small wmstool-switch-loading wmstool-switch"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/size.md correctly 1`] = `
<div>
  <span
    class="wmstool-switch wmstool-switch-checked"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    />
  </span>
  <br />
  <span
    class="wmstool-switch-small wmstool-switch wmstool-switch-checked"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    />
  </span>
</div>
`;

exports[`renders ./components/switch/demo/text.md correctly 1`] = `
<div>
  <span
    class="wmstool-switch wmstool-switch-checked"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    >
      开
    </span>
  </span>
  <br />
  <span
    class="wmstool-switch"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    >
      0
    </span>
  </span>
  <br />
  <span
    class="wmstool-switch wmstool-switch-checked"
    tabindex="0"
  >
    <span
      class="wmstool-switch-inner"
    >
      <i
        class="anticon anticon-check"
      />
    </span>
  </span>
</div>
`;
